# so_long

./: CMakeLists.txt  Makefile  main.c  main_bonus.c  so_long.h  so_long_platform.h
get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  libft.h
libft/srcs/: ft_split_inline.c  ft_strlen.c
libs/libft/: Makefile
libs/libft/srcs/: ft_dlstmap.c  ft_lstdelone_bonus.c  ft_split_inline.c
libs/minilibx/: Makefile
maps/: bonus.ber  map.ber  map_not_wall_around.ber
srcs/: command_processing.c  command_processing_move.c  command_processing_move_utils.c  create_state.c  draw.c  draw_2.c  ft_draw_all.c  ft_error.c  ft_game_set.c  ft_map_check.c  ft_parse.c  ft_parse_map_file.c  game_after_move.c  game_conditions.c  game_create_objects.c  load_textures.c  map_check_bonus.c  moment_processing.c  moment_processing_over.c  process_animation_exits.c  process_animation_player.c  set_textures.c  window.c
textures/: background.xpm  collectible.xpm  unknown.xpm
textures/coin/: 1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm
textures/enemy/notactive/: 0.xpm  1.xpm  2.xpm  3.xpm
textures/exit/close/: 0.xpm
textures/exit/open/: 0.xpm
textures/exit/trans/: 0.xpm  1.xpm  2.xpm
textures/player/down/: 3.xpm  5.xpm  6.xpm
textures/player/left/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm
textures/player/notactive/: 0.xpm  1.xpm  2.xpm
textures/player/right/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm
textures/player/up/: 0.xpm  1.xpm  4.xpm  7.xpm  8.xpm
textures/wall/: all.xpm  b.xpm  bl.xpm  l.xpm  no.xpm  r.xpm  rb.xpm  rbl.xpm  rl.xpm  t.xpm  tb.xpm  tbl.xpm  tl.xpm  tr.xpm  trb.xpm  trl.xpm
